--- a/bio6.html
+++ b/bio6.html
@@ -40,55 +40,134 @@
    <h1>  Saint Boktor Ben Romance </h1>
    <h1> (5 May / 27 Bramouda) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Romance.jpg" alt="Romance">
-    <p style="text-align: left; font-size: 18px;">
-Anba Wissa (a disciple of Anba Shenouda the Archimandrite) said:
-"There was a pious hermit in Shanshif named 'Thomas.' My father (Anba Shenouda) said about him that there was no one like him, and that our Lord Jesus Christ spoke with him, and angels visited him many times.
-When the time of his departure approached, he went to Anba Shenouda and spoke with him about the mighty works of God. Anba Thomas said to Anba Shenouda:
-'I will leave you, for the angels of God have told me that tonight God will remember me. This is the last time I will speak with you in the flesh. God has also revealed to me the day of your departure. It will be on the feast day of Anba Kyrillos, the Patriarch of Alexandria, and Saint Baqtar, head of the Monastery of Tabanseen. On that same day, the 7th of Abib, many saints will come to meet you.'
-So my father, Anba Shenouda, asked him:
-'And how will I know the day of your departure?'
-Anba Thomas replied:
-'I will perform a wondrous sign: the large stone on which you usually sit outside your cell will split open like an open book at the very moment my soul departs from my body. And you will see Raphael, the Archangel (who accompanied Tobiah, the son of Tobit, in his exile), and he will escort you along with the multitude of saints who will be with you until you reach my dwelling without a boat. Make Agape (Love Feast) with me, and bury my body with dust, for I have no one but God.'
-Anba Shenouda replied:
-'Let the will of God be done.'
-They embraced each other with a fatherly kiss, and my father said to him:
-'I entrust you to God, until we meet again in the Church of the Virgins.'
-Then my father went to his cell and increased his prayers and humility.
-After three months, while Saint Anba Shenouda was praying beside the stone, the stone split in two — you can read more about these saints on the St-Takla.org website in the sections of Saints' Lives, Synaxarium, Church History, and the Sayings of the Fathers — he sighed and said:
-'The wilderness of Shanshif has lost its lighthouse.'
-As he said this, he saw the Archangel Raphael pointing to him and saying:
-'Peace to you, beloved of God, and to all the saints. Let us go and cover the body of the saint (Anba Thomas), for they are waiting for you.'
-He followed him and arrived at the monastery during the night, where he met a brother who was chanting the Psalms, saying:
-'At midnight I rise to give thanks to You for Your righteous judgments...' (Psalm 119:62)
-Anba Shenouda said to him: 'Follow me.'
-Then he came to Anba Yousab the wise scribe, who was chanting:
-'Some trust in chariots and some in horses, but we trust in the name of the Lord our God. They collapse and fall, but we rise and stand upright.' (Psalm 20:7)
-He said to him: 'Follow me.'
-Then they came to Brother Enoch, the strong and brave one, who was singing:
-'He shall cover you with His feathers, and under His wings you shall take refuge; His truth shall be your shield and buckler.' (Psalm 91:4)
-He said to him: 'Follow me.'
-They entered the altar with the three brothers and prayed, then left.
-The Archangel Raphael walked ahead of them until they arrived without a boat. When they arrived, they prayed extensively, wrapped the body in burial cloths, and buried him in his place. Many miracles occurred through his holy body. He departed at a good old age on the 27th of Bashans in the year 168 A.M. (452 A.D.).
-Then his prophecy about the departure of Anba Shenouda the Archimandrite on the 7th of Abib was fulfilled. His church still stands to this day, about 5 kilometers north of the monastic cells, in the northeast of Akhmim. There is a monastery in that area bearing his name.
-May his prayers be with us all. Amen.
-</p>
 
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<span dir="rtl">
-قال الأنبا ويصا (تلميذ الأنبا شنوده رئيس المتوحدين): "كان هناك سائح بار في شنشيف، اسمه "توماس". وقال أبي (الأنبا شنوده) عنه أنه لا يوجد مثله، وأن سيدنا يسوع المسيح تحدَّث معه، وجاءته الملائكة مرات عديدة.
- وعندما جاء وقت انتقاله، ذهب إلى الأنبا شنوده وتحدث معه عن عظائم الله. قال الأنبا توماس إلى الأنبا شنوده: "سوف أتركك لأن ملائكة الله أخبروني أنه في هذه الليلة سيذكرني الله. هذه هي آخر مرة أتحدث فيها معك بالجسد. وأخبرني الله كذلك بيومك، وهو يوم عيد ميلاد الأنبا كيرلس رئيس أساقفة الإسكندرية، ومار بقطر رئيس دير تبانسين. وفي مثل ذلك اليوم السابع من أبيب، سيأتي كثير من القديسين للقائك." فأخبره أبي الأنبا شنوده: "وكيف سأعرف يوم انتقالك؟"
- فأجابه الأنبا توماس: "سأعمل علامة عجيبة ألا وهي: سينشق الحجر الكبير الذي جلست عليه أنت خارج قلايتك كالكتاب المفتوح، في اللحظة التي ستفارق فيها روحي جسدي. وسترى رافائيل رئيس الملائكة (الذي رافق طوبيا ابن طوبيت في أرض غربته) وسيرافقك مع جموع القديسين الذين سيكونون معك إلى أن تصل إلى بيتي بدون قارب.. واصنع أغابي (محبة) `agapy محبة معي، وداري جسدي بالتراب، لأنه ليس لي سوى الله." فأجبه الأنبا شنوده: "لتكن إرادة الله." وقبلا بعضهما قبلة أبوية وقال أبي له: "أودِعَك الله، إلى أن أقابلك في كنيسة البتوليين."
- وذهب أبي إلى قلايته وازداد في الصلوات والتخشع. وبعد ثلاثة أشهر، بينما القديس الأنبا شنوده واقفًا يصلي بجانب الحجر، إنشق الحجر إلى نصفين -ستجد المزيد عن هؤلاء القديسين هنا في موقع الأنبا تكلا في أقسام السير والسنكسار والتاريخ وأقوال الآباء- فتنهَّد وقال: "فقدت برية شنشيف منارتها." وعندما قال هذا رأى رئيس الملائكة رافائيل يشير إليه قائلًا: "السلام لك يا حبيب الله ولجميع القديسين. فلنذهب لنغطي جسد القديس (الأنبا توماس) لأنهم ينتظرونك."
- فتبعه وحضر إلى الدير ليلًا وقابل أخًا كان يُرتل المزامير قائلًا: "في منتصف الليل أقوم لأحمدك على أحكام برك.." (مز62:119)، فقال له الأنبا شنوده: "اتبعني"، ثم حضر إلى الأنبا يوساب الكاتب الحكيم، الذي كان يرتل قائلًا: "أما نحن فبإسم إلهنا نذكر، هم جثوا وسقطوا أما نحن فقمنا وانتصبنا." (مز7:20).
- فقال له: "اتبعني"، ثم جاءوا إلى الأخ أخنوخ القوي الشجاع، الذي كان يترنم: "بخوافيه يظللك، وتحت أجنحته تحتمي.. ترسٌ ومجنٌ حقه." (مز4:91) فقال له: "اتبعني". ودخل المذبح مع الأخوة الثلاثة وصلي ثم خرج. ومشى رئيس الملائكة رافائيل أمامهم حتى وصلوا بدون قارب، ولما وصلوا صلّوا كثيرًا، وكفَّنوه ودفنوه حيث كان. وحدثت معجزات كثيرة من خلال جسده. وتنيَّح بشيبة صالحة في 27 بشنس عام 168 ش. (452 م).
- ثم تحققت نبوءته بانتقال الأنبا شنوده رئيس المتوحدين في 7 أبيب، ومازالت كنيسته حتى الآن موجودة. إنها على بعد حوالي 5 كيلومترات شمال الصوامع، في الشمال الشرقي لأخميم. وفي ذلك المكان هناك ديرًا باسمه.
- بركة صلواته مع جميعنا آمين.
-</span>
-</p>
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>Early Life:</h2>
+  <p>
+    Saint Bqatar was born in Antioch to a noble Christian family. His father, Prince Romanios, was a high-ranking minister in the Roman state who renounced the faith under Diocletian, and his mother, Martha, was a devout woman who prayed to God for a blessed child, which God granted her in the person of Bqatar.
+  </p>
+  <p>
+    He grew up under the care of his pious mother, while his father was shallow in his faith and worship. Bqatar formed a strong friendship with Prince Akladios, his cousin, sharing the same purpose and devotion.
+  </p>
+  <p>
+    Bqatar advanced in rank, being a devout, serious, and ascetic young man, detached from worldly pleasures, gentle, and merciful.
+  </p>
+
+  <h2>Diocletian’s Denial and Romanios’ Collapse:</h2>
+  <p>
+    When Diocletian renounced faith, Bqatar and Akladios refused to worship idols. The court officials concealed this from the king out of love for the two princes. They cared for prisoners and the needy and buried the bodies of Christian martyrs.
+  </p>
+  <p>
+    The king summoned Akladios, who declared his faith in Christ. The king ordered him sent to Upper Egypt to be executed far from Antioch to prevent unrest.
+  </p>
+  <p>
+    King Diocletian summoned Romanios and accused him that his son Bqatar buried Christians and cared for prisoners. He threatened to kill his son if he did not renounce Christ. Romanios sent others to convince Bqatar, but he refused firmly.
+  </p>
+
+  <h2>Meeting His Mother:</h2>
+  <p>
+    His mother insisted on seeing him before his journey outside the city. When she saw him, she fainted. Bqatar reassured her brightly: "Do not weep, mother, for I am with Jesus on the path of grace. But weep for Romanios, your husband, who ceased to be a father when he renounced faith and followed the devil. Why weep for me? I am on the way to heaven! I long to depart, for this is better."
+  </p>
+  <p>
+    Martha’s heart was comforted, and she encouraged her son. They shared a spiritual dialogue that moved everyone, then she bid him farewell as he sailed to Alexandria.
+  </p>
+
+  <h2>In Alexandria:</h2>
+  <p>
+    Saint Bqatar met Governor Armanius, who treated him courteously for his and his family’s honor. When Bqatar insisted on witnessing for Christ, the governor tortured him by placing him on an iron bed with fire beneath. God protected him, and not a single hair was harmed. The governor, enraged, threw him into prison.
+  </p>
+  <p>
+    The daughter of a prince witnessed the Christians in prison. She fell dead, and Bqatar prayed over her, reviving her. Her parents rejoiced and believed in Christ. She married and bore a child named "Bqatar."
+  </p>
+
+  <h2>At the Governor’s House:</h2>
+  <p>
+    The governor returned home troubled. His Christian wife reproached him, and he threatened her, claiming Bqatar’s survival was witchcraft. Finally, he decided to send him to Ansena for torture and execution, fearing that Romanios might avenge him.
+  </p>
+
+  <h2>In Upper Egypt:</h2>
+  <p>
+    The ship landed in Taha, where Bqatar met a soldier friend, Bifam, who encouraged him to openly profess faith in Christ. The ship sailed to Ansena. Though the governor tried to kill him, his advisors placed him in an abandoned palace in a mountain rather than kill him, so that his father would not seek revenge.
+  </p>
+  <p>
+    Bqatar lived in the abandoned palace “Barqun” without food or drink, where God sent a Christian to provide carpentry tools for work. He practiced ascetic life joyfully, resisted all the devils, and God strengthened him. His mother was reassured and informed about his spiritual life.
+  </p>
+
+  <h2>Martyrdom:</h2>
+  <p>
+    A new governor summoned Bqatar from the palace and tortured him: by fire, poison, and boiling oil, yet God strengthened him. He was accused of "using sorcery," but he declared that his power came from faith, not magic. The governor summoned a magician to prepare deadly poison, but Bqatar remained unharmed. The magician’s books were burned, and many witnessed his faith, rejoicing in martyrdom. Soldiers also converted through him.
+  </p>
+  <p>
+    The governor ordered Bqatar’s beheading. His mother later built a church in Ansena, where he lived before his martyrdom. Bqatar appeared to her in the church, revealing some future matters concerning the Egyptian church. She carried his relics to Antioch, honored by the people of Upper Egypt. The Coptic Church commemorates his martyrdom on 27 Parmouti and the consecration of his church on 27 Hathor.
+  </p>
+</div>
+
+    
+
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>نشأته:</h2>
+  <p>
+    وُلد بقطر في مدينة إنطاكية من أسرة مسيحية نبيلة، والده الأمير رومانيوس من كبار وزراء الدولة الرومانية الذي أنكر الإيمان في أيام دقلديانوس، ووالدته مرثا إنسانة تقية طلبت من الله أن يهبها نسلًا مباركًا فوهبها هذا الطوباوي بقطر.
+  </p>
+  <p>
+    عاش بقطر تحت رعاية أمه التقية، بينما كان والده سطحيًا في إيمانه وعبادته. ارتبط بقطر بصداقة قوية مع الأمير أقلاديوس ابن خالته، فكانا يشتركان في الهدف والعبادة.
+  </p>
+  <p>
+    ترقى الأمير بقطر في المناصب، إذ كان شابًا تقيًا، جادًا في حياته، زاهدًا في أباطيل العالم وملذاته، رحومًا ولطيفًا للغاية.
+  </p>
+
+  <h2>دقلديانوس الجاحد ورومانيوس المنهار:</h2>
+  <p>
+    إذ جحد دقلديانوس الإيمان رفض الأميران بقطر وأقلاديوس السجود للأوثان، وقد أخفي رجال البلاط الخبر عن الملك لحبهم لهذين الأميرين، فكان الأميران يفتقدان المسجونين ويهتمان باحتياجات المعوزين ويدفنا أجساد الشهداء القديسين.
+  </p>
+  <p>
+    سمع الملك فاستدعى أقلاديوس الذي أعلن إيمانه بمسيحه، فأمر الملك بإرساله إلى صعيد مصر ليُقتل هناك بعيدًا عن إنطاكية حتى لا يثور الشعب.
+  </p>
+  <p>
+    استدعى الملك دقلديانوس وزيره رومانيوس وقال له بأنه قد بلغه أن ابنه بقطر يقوم بدفن أجساد المسيحيين الذين تقتلهم الدولة، وبافتقاد المسجونين، ثم صار يهدده بقتل ابنه إن لم يجحد مسيحه. أرسل رومانيوس إلى ابنه وأصدقائه لعلهم يستطيعون إقناعه بالعدول عن إيمانه فرفض بإصرار.
+  </p>
+
+  <h2>لقاء مع والدته:</h2>
+  <p>
+    أصرت الأم أن ترى ابنها وتودعه قبيل سفره خارج المدينة. وبالفعل رأته فسقطت مغشيًا عليها، أما هو ففي بشاشة قال لها: "لا تبكى يا أمي على ابنك، فأنا مع يسوع في طريق النعمة، ولكن ابكِ على رومانيوس زوجك. إنه لم يعد أبي يوم أنكر الإيمان واتبع طريق الشيطان، يوم أنهي بنوّتي له. ابكِ عليه يا أماه لعل الرب يهديه ويعيده إلى حظيرة الإيمان. أما أنا فلماذا تبكين عليّ؟ إنني في طريقي إلى السماء؟! لي اشتهاء أن أنطلق فإن هذا أفضل".
+  </p>
+  <p>
+    استراح قلب مرثا لتعود فتعزى ابنها وتشجعه، ودخل الاثنان في حوار روحي لطيف أبكى كل السامعين، ثم ودعت ابنها ليبحر إلى الإسكندرية.
+  </p>
+
+  <h2>في الإسكندرية:</h2>
+  <p>
+    التقى القديس بقطر بالوالي أرمانيوس الذي لاطفه من أجل كرامته وكرامة عائلته، لكن إذ أصر بقطر على الشهادة للسيد المسيح قام الوالي بتعذيبه بوضعه على سرير من حديد وإيقاد نار تحته، لكن الرب خلصه ولم تمس النار شعرة واحدة منه. اغتاظ الوالي وألقاه في السجن.
+  </p>
+  <p>
+    كانت ابنة أحد الأمراء تتطلع من قصرها الذي يطل على السجن لتنظر المسيحيين المسجونين بينما كان جماعة من السكارى يستهزئون بهم. سقطت الفتاة إلى أسفل جثة هامدة، فطلب الأمير بقطر أن يحضروا الجثمان ليصلي عليه ويقيم الفتاة ويسلمها لوالديها ففرحا جدًا وآمنا بالمسيح، تزوجت الفتاة وأنجبت طفلًا دعته "بقطر".
+  </p>
+
+  <h2>في بيت الوالي:</h2>
+  <p>
+    عاد الوالي إلى بيته كئيبًا بسبب ما حدث، فكانت زوجته وهي مسيحية توبخه بعنف، فصار يهددها حاسبًا أن ما صار لبقطر إنما هو من قبيل السحر. أخيرًا إذ ضاق به الأمر قرر ترحيله إلى والي أنصنا ليقوم بتعذيبه وقتله، ولعلّه خشي أن يقتله فيندم رومانيوس على ما فعله بابنه وينتقم له من الوالي أرمانيوس.
+  </p>
+
+  <h2>في صعيد مصر:</h2>
+  <p>
+    رست السفينة في مدينة طحا حيث التقى بصديق له جندي يدعى بيفام، كان مسيحيًا مختفيًا فشجعه أن يعلن إيمانه بالسيد. انطلقت السفينة إلى أنصنا، وإذ دخل في حوارٍ مع الوالي أراد قتله، لكن مستشاريه طلبا منه أن يضعه في قصر مهجور في بطن الجبل ولا يقتله لئلا ينتقم منه والده رومانيوس.
+  </p>
+  <p>
+    أُلقي القديس في القصر المهجور الذي يدعى "البارقون" بلا طعام ولا شراب، حاسبين أن الشياطين تقتله، لكن ربنا يسوع أرسل له رجلًا مسيحيًا قدم له عِدة نجارة ليمارس بعض أعمال النجارة ويبيعها له. مارس القديس حياته النسكية بفرح، وقد حاولت الشياطين مقاومته بكل وسيلة فكان يغلبها بقوة ربنا يسوع المسيح الذي ظهر له وطمأنه على إيمان والدته وأعلن له عن انتقاله إلى كنيسة الأبكار.
+  </p>
+
+  <h2>استشهاده:</h2>
+  <p>
+    إذ جاء إلى أنصنا والٍ جديد استدعاه من القصر، وصار يعذبه، تارة بالنار وأخرى بتقديم سُمّ له وثالثة بوضعه في زيت مغلي وكان الرب يعمل فيه بقوة. وُجه لبقطر اتهام هو "استخدام السحر"، أما هو فأعلن انه إنسان بسيط يحمل قوة الإيمان التي أطفأت اللَّهب وليس السحر. استدعى الوالي أحد كبار السحرة ليعد سمًا قاتلًا في طعام يأكله القديس، وإذ لم يُصب بضررٍ أعد نوعًا أخطر وبكميةٍ أكبر فلم يتأثر، عندئذ أحرق الساحر كتبه، وجاء إلى القديس يعلن إيمانه بهذا الإله القوي، وقبل الاستشهاد بفرح، كما آمن كثيرون أثناء عذابات القديس بقطر، منهم بعض الجند، وتمتعوا بإكليل الشهادة.
+  </p>
+  <p>
+    أمر الوالي بقطع رأس القديس: قيل أن والدته جاءت بعد ذلك وبنت كنيسة بمنطقة أنصنا التي عاش فيها ابنها قبل استشهاده، وأنه ظهر لها في الكنيسة وأنبأها ببعض أمور مقبلة خاصة بكنيسة مصر. حملت مرثا رُفات ابنها القديس بقطر إلى إنطاكية بعد أن ودعه أهل الصعيد في مهابة وتكريم، وكان الكل يتباركون منه. تعيد الكنيسة بتذكار استشهاده في 27 برمودة، وبتكريس كنسيته في 27 هاتور.
+  </p>
+</div>
+
 
 
     <a href="index.html">← Back to main page</a>
   </div>
 </body>
 </html>
+
