--- a/bio6.html
+++ b/bio6.html
@@ -42,153 +42,127 @@
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Romance.jpg" alt="Romance">
 
 
-<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>Their Upbringing:</h2>
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>Early Life:</h2>
   <p>
-    Saints Cosmas and Damian, along with their brothers Anthimus, Leontius, Eutropius, and their mother Theodota, lived in the city of Agas, a port in the Cilician province of Arabia in Asia Minor, at the end of the third century AD.
+    Saint Bqatar was born in Antioch to a noble Christian family. His father, Prince Romanios, was a high-ranking minister in the Roman state who renounced the faith under Diocletian, and his mother, Martha, was a devout woman who prayed to God for a blessed child, which God granted her in the person of Bqatar.
   </p>
   <p>
-    We know little about their father, but their mother Theodota, meaning "Gift of God," was devout, loving to strangers, and compassionate. She was widowed and raised her children with reverence for the Lord and love of virtue.
-  </p>
-
-  <h2>Faithful Physicians:</h2>
-  <p>
-    The family was very wealthy. Cosmas and Damian learned the art of medicine and treated patients without charging fees, while their other brothers went into the wilderness to live ascetically.
+    He grew up under the care of his pious mother, while his father was shallow in his faith and worship. Bqatar formed a strong friendship with Prince Akladios, his cousin, sharing the same purpose and devotion.
   </p>
   <p>
-    With their skill, Cosmas and Damian combined their medical practice with faith in God, healing the sick through extraordinary power alongside using medicines. Their daily motto was: "Whether you eat or drink or whatever you do, do all to the glory of God" (1 Corinthians 10:31).
+    Bqatar advanced in rank, being a devout, serious, and ascetic young man, detached from worldly pleasures, gentle, and merciful.
   </p>
 
-  <h2>The Silverless Physicians:</h2>
+  <h2>Diocletian’s Denial and Romanios’ Collapse:</h2>
   <p>
-    Their success, under God’s grace, led them to live a life of simplicity and prayer. They feared attachment to silver and the resulting evils. They became known as "the silverless physicians," and pagans mockingly called them “enemies of silver.”
+    When Diocletian renounced faith, Bqatar and Akladios refused to worship idols. The court officials concealed this from the king out of love for the two princes. They cared for prisoners and the needy and buried the bodies of Christian martyrs.
   </p>
   <p>
-    Their honesty, devout life, and reliance on the Lord attracted many pagan patients to Christianity.
+    The king summoned Akladios, who declared his faith in Christ. The king ordered him sent to Upper Egypt to be executed far from Antioch to prevent unrest.
   </p>
   <p>
-    A hymn about the martyrs, sung in the West, says: "They practiced medicine through divine gift, giving health to all the weary freely, healing the sick and the sorrowful, offering help to those in need without payment. They restored sight to the blind, healed the lame, and helped the deaf. It is said they cared for both humans and animals, showing mercy equally."
-  </p>
-
-  <h2>Healing of Palladia:</h2>
-  <p>
-    Palladia spent all she had on many doctors until she became impoverished. Hearing about these two saints, she turned to them. They prayed for her and gave her medicine. Once she was healed, she offered a small gift to Saint Damian, but he refused it, as she was needy.
+    King Diocletian summoned Romanios and accused him that his son Bqatar buried Christians and cared for prisoners. He threatened to kill his son if he did not renounce Christ. Romanios sent others to convince Bqatar, but he refused firmly.
   </p>
 
-  <h2>Witness to Christ:</h2>
+  <h2>Meeting His Mother:</h2>
   <p>
-    When Diocletian renounced the faith and commanded the worship of idols, Governor Lysias summoned them and questioned them about their preaching of Christ. They answered that they chose medicine not for profit but to benefit others, and that Christ gave them the power to heal, so many believed.
+    His mother insisted on seeing him before his journey outside the city. When she saw him, she fainted. Bqatar reassured her brightly: "Do not weep, mother, for I am with Jesus on the path of grace. But weep for Romanios, your husband, who ceased to be a father when he renounced faith and followed the devil. Why weep for me? I am on the way to heaven! I long to depart, for this is better."
   </p>
   <p>
-    The governor became very angry and asked about their brothers. He summoned them with their mother and commanded them to offer incense to idols, but they refused. He tried to entice them with worldly promises, and when they did not comply, he threatened them for disobedience to the emperor.
-  </p>
-  <p>
-    The blessed brothers replied that they were Christians and, for their faith, they would endure persecution, eagerly anticipating suffering and death to meet Christ. The governor ordered the five to be pressed in a press. The saints encouraged their younger brothers to remain faithful. Seeing their steadfastness, he cast them into the sea in chains, but God glorified them, sending an angel to break the chains and save them, washing them ashore safely.
+    Martha’s heart was comforted, and she encouraged her son. They shared a spiritual dialogue that moved everyone, then she bid him farewell as he sailed to Alexandria.
   </p>
 
-  <h2>Healing of the Governor:</h2>
+  <h2>In Alexandria:</h2>
   <p>
-    When Lysias heard of this, he summoned them again, cursing them and the holy name of God with his pagan gods. But an angel struck him, and evil spirits entered, torturing him.
+    Saint Bqatar met Governor Armanius, who treated him courteously for his and his family’s honor. When Bqatar insisted on witnessing for Christ, the governor tortured him by placing him on an iron bed with fire beneath. God protected him, and not a single hair was harmed. The governor, enraged, threw him into prison.
   </p>
   <p>
-    The saints were summoned and prayed for him to receive forgiveness from Christ, and he was immediately healed.
+    The daughter of a prince witnessed the Christians in prison. She fell dead, and Bqatar prayed over her, reviving her. Her parents rejoiced and believed in Christ. She married and bore a child named "Bqatar."
   </p>
 
-  <h2>Return to Torture:</h2>
+  <h2>At the Governor’s House:</h2>
   <p>
-    The governor soon returned to his cruelty, ordering Saints Cosmas and Damian to be hung on crosses and stoned. Yet the stones bounced off them harmlessly. Their brothers were bound and thrown between the crosses to be shot with arrows, but the arrows rebounded on the attackers. Finally, all were forced to flee.
+    The governor returned home troubled. His Christian wife reproached him, and he threatened her, claiming Bqatar’s survival was witchcraft. Finally, he decided to send him to Ansena for torture and execution, fearing that Romanios might avenge him.
+  </p>
+
+  <h2>In Upper Egypt:</h2>
+  <p>
+    The ship landed in Taha, where Bqatar met a soldier friend, Bifam, who encouraged him to openly profess faith in Christ. The ship sailed to Ansena. Though the governor tried to kill him, his advisors placed him in an abandoned palace in a mountain rather than kill him, so that his father would not seek revenge.
   </p>
   <p>
-    The governor then had them tied and thrown into a fiery furnace for three days and nights, then cast into a boiling bath. Finally, they were placed on heated iron beds, but God preserved them alive and unharmed.
+    Bqatar lived in the abandoned palace “Barqun” without food or drink, where God sent a Christian to provide carpentry tools for work. He practiced ascetic life joyfully, resisted all the devils, and God strengthened him. His mother was reassured and informed about his spiritual life.
+  </p>
+
+  <h2>Martyrdom:</h2>
+  <p>
+    A new governor summoned Bqatar from the palace and tortured him: by fire, poison, and boiling oil, yet God strengthened him. He was accused of "using sorcery," but he declared that his power came from faith, not magic. The governor summoned a magician to prepare deadly poison, but Bqatar remained unharmed. The magician’s books were burned, and many witnessed his faith, rejoicing in martyrdom. Soldiers also converted through him.
   </p>
   <p>
-    When the governor grew tired of torturing them, he sent them to the king, who tortured them as well. Their mother comforted and encouraged them. The king rebuked her for her devotion, ordered her beheaded, and she received the crown of life. Her body was left unburied, but Saint Damian cried out to the people: "Is there no one among you merciful to cover this widow’s body and bury it?" Then Boutros bin Romanos took her body, buried it, and honored it.
-  </p>
-  <p>
-    When the king learned what Boutros had done, he ordered him exiled to Egypt, where he received the crown of martyrdom. The next day, the king ordered the beheading of Saints Cosmas, Damian, and their brothers, granting them the crown of life in the Kingdom of Heaven.
-  </p>
-  <p>
-    After the persecution ended, many churches were built in their honor, where God showed many signs and wonders.
-  </p>
-  <p>
-    The Western Church commemorates them on September 27 and on the fourth Thursday of Lent. The Coptic Church commemorates them on Hathor 22 and Boona 22 each year. May the prayers of these saints be with us all. Amen.
+    The governor ordered Bqatar’s beheading. His mother later built a church in Ansena, where he lived before his martyrdom. Bqatar appeared to her in the church, revealing some future matters concerning the Egyptian church. She carried his relics to Antioch, honored by the people of Upper Egypt. The Coptic Church commemorates his martyrdom on 27 Parmouti and the consecration of his church on 27 Hathor.
   </p>
 </div>
-
 
     
 
-<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>نشأتهم:</h2>
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>نشأته:</h2>
   <p>
-    عاش القديسون قزمان ودميان وإخوتهما أنثيموس Anthimus ولاونديوس Leontius وابرابيوس Eutropius وأمهم ثاؤذوتي في مدينة أجاس وهي ميناء بمقاطعة كيليكية بمنطقة أرابيا بآسيا الصغرى، في نهاية القرن الثالث الميلادي.
+    وُلد بقطر في مدينة إنطاكية من أسرة مسيحية نبيلة، والده الأمير رومانيوس من كبار وزراء الدولة الرومانية الذي أنكر الإيمان في أيام دقلديانوس، ووالدته مرثا إنسانة تقية طلبت من الله أن يهبها نسلًا مباركًا فوهبها هذا الطوباوي بقطر.
   </p>
   <p>
-    لا نعرف شيئا عن الوالد، أما الأم ثأوذوتي أو ثيؤدوره (ثيئودوتا Theodota) وتعني "عطية الله"، فكانت تتقي الله، مُحبة للغرباء، رحومة. ترمّلت وأولادها بعد أطفال، فربّتهم وعلّمتهم مخافة الرب ومحبة الفضيلة.
-  </p>
-
-  <h2>طبيبان مؤمنان:</h2>
-  <p>
-    كانت هذه الأسرة غنية جدًا. تعلّم قزمان ودميان صناعة الطب، وكانا يعالجان المرضى بلا أجر، أما إخوتهما فمضوا إلى البرية وترهّبوا.
+    عاش بقطر تحت رعاية أمه التقية، بينما كان والده سطحيًا في إيمانه وعبادته. ارتبط بقطر بصداقة قوية مع الأمير أقلاديوس ابن خالته، فكانا يشتركان في الهدف والعبادة.
   </p>
   <p>
-    مع مهارة الصبيان قزمان ودميان كانا يهتمان في عملهما بالإيمان بالله طبيب النفوس والأجساد. وكان الله يهبهما نعمة خاصة، فيشفيان المرضي بقوة فائقة للطبيعة مع استخدامهما للأدوية. كانا شعارهما في حياتهما اليومية وعملهما "إن أكلتم أو شربتم أو فعلتم أي شيء فافعلوا كل شيء لمجد الله" (1كو31:10).
+    ترقى الأمير بقطر في المناصب، إذ كان شابًا تقيًا، جادًا في حياته، زاهدًا في أباطيل العالم وملذاته، رحومًا ولطيفًا للغاية.
   </p>
 
-  <h2>الطبيبان بلا فضة:</h2>
+  <h2>دقلديانوس الجاحد ورومانيوس المنهار:</h2>
   <p>
-    دفعهما نجاحهما في عملهما خلال نعمة الله بالأكثر إلى ممارسة حياة الكفاف مع الصلاة والأمانة، فكانا يخشيان تعلق نفسيهما بمحبة الفضة فيسقطان في شرور كثيرة. اشتهرا بلقب الطبيبين بلا فضة، ودعاهما الوثنيون مبغضي الفضة.
+    إذ جحد دقلديانوس الإيمان رفض الأميران بقطر وأقلاديوس السجود للأوثان، وقد أخفي رجال البلاط الخبر عن الملك لحبهم لهذين الأميرين، فكان الأميران يفتقدان المسجونين ويهتمان باحتياجات المعوزين ويدفنا أجساد الشهداء القديسين.
   </p>
   <p>
-    أمانتهما في عملهما وحياتهما التقوية مع اتكالهما علي الرب جذب كثير من المرضى الوثنيين إلي الإيمان المسيحي.
+    سمع الملك فاستدعى أقلاديوس الذي أعلن إيمانه بمسيحه، فأمر الملك بإرساله إلى صعيد مصر ليُقتل هناك بعيدًا عن إنطاكية حتى لا يثور الشعب.
   </p>
   <p>
-    جاء في التسبحة خاصة بالشهيدين التي كانت تُنشد في الغرب: "كانا الدارسين فن الطب يهبان خلال العطية الإلهية جميع المتعبين الصحة مجانًا، يهبان الشفاء للمرضي والحزانى، يقدمون لمن يشكو ما ينتظره منهما بلا مقابل. يهبان النظر للعميان، والشفاء للعرج والمساعدة للصُم. قيل عنهما أنهما كانا يهتمان بعلاج الإنسان والحيوان، إذ كانا يترفقان ببني البشر كما بالحيوانات".
-  </p>
-
-  <h2>شفاء بالاديا:</h2>
-  <p>
-    أنفقت بالاديا كل ما لديها على أطباء كثيرين حتى افتقرت. وأخيرًا سمعت عن هذين القديسين فلجأت إليهما. صليا من أجلها وقدما لها الدواء، وإذ شفيت قدمت هدية بسيطة للقديس دميان فرفضها بشدة، إذ كانت محتاجة.
+    استدعى الملك دقلديانوس وزيره رومانيوس وقال له بأنه قد بلغه أن ابنه بقطر يقوم بدفن أجساد المسيحيين الذين تقتلهم الدولة، وبافتقاد المسجونين، ثم صار يهدده بقتل ابنه إن لم يجحد مسيحه. أرسل رومانيوس إلى ابنه وأصدقائه لعلهم يستطيعون إقناعه بالعدول عن إيمانه فرفض بإصرار.
   </p>
 
-  <h2>شهادة القديسين للسيد المسيح:</h2>
+  <h2>لقاء مع والدته:</h2>
   <p>
-    لما ارتد دقلديانوس عن الإيمان وأمر بعبادة الأوثان، استدعاهما ليسياس الحاكم ودخل معهما في حوار عن كرازتهما بالإيمان بالسيد المسيح وهما طبيبان. أجابا أنهما اختارا مهنة الطب لا لمكسبٍ ماديٍ بل لمنفعة الجميع، وأن ربنا يسوع المسيح يهبهما قوة الشفاء، لذلك آمن كثيرون به.
+    أصرت الأم أن ترى ابنها وتودعه قبيل سفره خارج المدينة. وبالفعل رأته فسقطت مغشيًا عليها، أما هو ففي بشاشة قال لها: "لا تبكى يا أمي على ابنك، فأنا مع يسوع في طريق النعمة، ولكن ابكِ على رومانيوس زوجك. إنه لم يعد أبي يوم أنكر الإيمان واتبع طريق الشيطان، يوم أنهي بنوّتي له. ابكِ عليه يا أماه لعل الرب يهديه ويعيده إلى حظيرة الإيمان. أما أنا فلماذا تبكين عليّ؟ إنني في طريقي إلى السماء؟! لي اشتهاء أن أنطلق فإن هذا أفضل".
   </p>
   <p>
-    ثار الحاكم عليهما جدًا وإذ استعلم منهما عن مكان اخوتهما، استحضرهم ومعهم أمهم، وأمرهم أن يبخروا للأوثان فلم يطيعوه. حاول الحاكم أن يغريهم بوعود زمنية باطلة، وإذ لم يستجيبوا بدأ يهددهم بالاتهام أنهم يعصون أمر الإمبراطور.
-  </p>
-  <p>
-    أجابه الإخوة المباركون أنهم مسيحيون، ومن أجل إيمانهم يُضطهدون، وأنهم منذ زمن طويل يشتهون احتمال الآلام حتى الموت، بل وكانوا يتعجلون هذا الأمر إذ يريدون الالتقاء بالسيد المسيح. فأمر أن يُعصر الخمسة في المعصرة. كان القديسان يشجعان اخوتهم الصغار علي التمسك بالإيمان، وإذ رأي الحاكم ثباتهم أمر بطرحهم في البحر وهم مقيّدون بالسلاسل، لكن الرب تمجد فيهم، فأرسل ملاكه وحطّم السلاسل وأنقذهم حيث دفعتهم الأمواج إلي الشاطئ سالمين.
+    استراح قلب مرثا لتعود فتعزى ابنها وتشجعه، ودخل الاثنان في حوار روحي لطيف أبكى كل السامعين، ثم ودعت ابنها ليبحر إلى الإسكندرية.
   </p>
 
-  <h2>شفاء الحاكم:</h2>
+  <h2>في الإسكندرية:</h2>
   <p>
-    إذ سمع ليسياس بما حدث معهم استدعاهم وصار يلعنهم ويلعن اسم الله القدوس بآلهته الوثنية، لكن ملاكًا لطمه فدخلت فيه أرواح شريرة كانت تعذبه.
+    التقى القديس بقطر بالوالي أرمانيوس الذي لاطفه من أجل كرامته وكرامة عائلته، لكن إذ أصر بقطر على الشهادة للسيد المسيح قام الوالي بتعذيبه بوضعه على سرير من حديد وإيقاد نار تحته، لكن الرب خلصه ولم تمس النار شعرة واحدة منه. اغتاظ الوالي وألقاه في السجن.
   </p>
   <p>
-    اشتدت الآلام فاستدعي القديسين وطلب العفو منهما. تحنّنا عليه وصليا من أجله أن يغفر له السيد المسيح، فشُفي للحال.
+    كانت ابنة أحد الأمراء تتطلع من قصرها الذي يطل على السجن لتنظر المسيحيين المسجونين بينما كان جماعة من السكارى يستهزئون بهم. سقطت الفتاة إلى أسفل جثة هامدة، فطلب الأمير بقطر أن يحضروا الجثمان ليصلي عليه ويقيم الفتاة ويسلمها لوالديها ففرحا جدًا وآمنا بالمسيح، تزوجت الفتاة وأنجبت طفلًا دعته "بقطر".
   </p>
 
-  <h2>عودة للعذابات:</h2>
+  <h2>في بيت الوالي:</h2>
   <p>
-    سرعان ما عاد الحاكم إلي عنفه وقسوته، فأمر بتعليق القديسين قزمان ودميان علي صليبين ورجمهما بالحجارة، فكانت الحجارة لا تكاد تمس جسديهما حتى ترتد بقوة علي الراجمين. أما اخوتهما فقُيدا وأُلقيا بين الصليبين ليُرموا بالسهام، فكانت السهام ترتد علي ضاربيها. أخيرًا اضطر الكل أن يهربوا.
+    عاد الوالي إلى بيته كئيبًا بسبب ما حدث، فكانت زوجته وهي مسيحية توبخه بعنف، فصار يهددها حاسبًا أن ما صار لبقطر إنما هو من قبيل السحر. أخيرًا إذ ضاق به الأمر قرر ترحيله إلى والي أنصنا ليقوم بتعذيبه وقتله، ولعلّه خشي أن يقتله فيندم رومانيوس على ما فعله بابنه وينتقم له من الوالي أرمانيوس.
+  </p>
+
+  <h2>في صعيد مصر:</h2>
+  <p>
+    رست السفينة في مدينة طحا حيث التقى بصديق له جندي يدعى بيفام، كان مسيحيًا مختفيًا فشجعه أن يعلن إيمانه بالسيد. انطلقت السفينة إلى أنصنا، وإذ دخل في حوارٍ مع الوالي أراد قتله، لكن مستشاريه طلبا منه أن يضعه في قصر مهجور في بطن الجبل ولا يقتله لئلا ينتقم منه والده رومانيوس.
   </p>
   <p>
-    أمر الحاكم بحل وثاقهم وإلقائهم في أتون النار ثلاثة أيام وثلاث ليالٍ ثم طرحهم في مستوقد حمام. وأخيرًا وضعهم على أسرّة من الحديد محمّاة، فأقامهم الرب أحياء بغير فساد.
+    أُلقي القديس في القصر المهجور الذي يدعى "البارقون" بلا طعام ولا شراب، حاسبين أن الشياطين تقتله، لكن ربنا يسوع أرسل له رجلًا مسيحيًا قدم له عِدة نجارة ليمارس بعض أعمال النجارة ويبيعها له. مارس القديس حياته النسكية بفرح، وقد حاولت الشياطين مقاومته بكل وسيلة فكان يغلبها بقوة ربنا يسوع المسيح الذي ظهر له وطمأنه على إيمان والدته وأعلن له عن انتقاله إلى كنيسة الأبكار.
+  </p>
+
+  <h2>استشهاده:</h2>
+  <p>
+    إذ جاء إلى أنصنا والٍ جديد استدعاه من القصر، وصار يعذبه، تارة بالنار وأخرى بتقديم سُمّ له وثالثة بوضعه في زيت مغلي وكان الرب يعمل فيه بقوة. وُجه لبقطر اتهام هو "استخدام السحر"، أما هو فأعلن انه إنسان بسيط يحمل قوة الإيمان التي أطفأت اللَّهب وليس السحر. استدعى الوالي أحد كبار السحرة ليعد سمًا قاتلًا في طعام يأكله القديس، وإذ لم يُصب بضررٍ أعد نوعًا أخطر وبكميةٍ أكبر فلم يتأثر، عندئذ أحرق الساحر كتبه، وجاء إلى القديس يعلن إيمانه بهذا الإله القوي، وقبل الاستشهاد بفرح، كما آمن كثيرون أثناء عذابات القديس بقطر، منهم بعض الجند، وتمتعوا بإكليل الشهادة.
   </p>
   <p>
-    ولما تعب الوالي من تعذيبهم أرسلهم إلى الملك فعذبهم هو أيضًا. وكانت أمهم تُعزيهم وتُصبّرهم. انتهرها الملك فوبّخته على قسوته وعلى عبادة الأوثان، فأمر بقطع رأسها ونالت إكليل الحياة، وبقى جسدها مطروحًا لم يجسر أحد أن يدفنه. فصرخ القديس دميان في الحاضرين قائلًا: "يا أهل المدينة أليس فيكم أحد ذو رحمة، فيستر جسد هذه العجوز الأرملة ويدفنها؟" عند ذلك تقدم بقطر بن رومانوس وأخذه وكفنه ثم دفنه.
-  </p>
-  <p>
-    لما علم الملك بما عمله بقطر أمر بنفيه إلى ديار مصر، وهناك نال إكليل الشهادة. وفي الغد أمر الملك بقطع رؤوس القديسين قزمان ودميان وإخوتهما فنالوا إكليل الحياة في ملكوت السموات.
-  </p>
-  <p>
-    وبعد أن انقضى زمان الاضطهاد، بُنيت لهم كنائس عديدة، أظهر الرب فيها آيات وعجائب كثيرة.
-  </p>
-  <p>
-    تُعيد لهم الكنيسة الغربية في 27 سبتمبر، وفي الخميس الرابع من الصوم الكبير. وتعيد لهم الكنيسة القبطية في يوم 22 هاتور و22 بؤونة من كل عام. صلوات هؤلاء القديسين تكون معنا جميعًا. آمين.
+    أمر الوالي بقطع رأس القديس: قيل أن والدته جاءت بعد ذلك وبنت كنيسة بمنطقة أنصنا التي عاش فيها ابنها قبل استشهاده، وأنه ظهر لها في الكنيسة وأنبأها ببعض أمور مقبلة خاصة بكنيسة مصر. حملت مرثا رُفات ابنها القديس بقطر إلى إنطاكية بعد أن ودعه أهل الصعيد في مهابة وتكريم، وكان الكل يتباركون منه. تعيد الكنيسة بتذكار استشهاده في 27 برمودة، وبتكريس كنسيته في 27 هاتور.
   </p>
 </div>
-
 
 
 
@@ -196,5 +170,3 @@
   </div>
 </body>
 </html>
-
-
